--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,13 @@ body {
 .img-medium {
     height: 200px;
 }
-
+ .container
+ {
+color: grey;
+ max-width: 800px;
+ font-family: sans-serif;
+ padding-top: 60px;
+ padding-left: 20px;
+ padding-right: 20px;
+ margin: 0 auto;
+ }
